--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
-    <link href="css/styles.css" rel="stylesheet"/>
+<!--        <link href="css/styles.css" rel="stylesheet"/>-->
+    <link rel="stylesheet" th:href="@{/css/styles.css}" />
+<!--    <link rel="stylesheet" href="@{/js/styles.css}"/>-->
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">RunGroup</title>
 </head>
 
@@ -27,6 +29,8 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                        <li><a class="dropdown-item" th:href="@{clubs/new}">Create Running Club</a></li>
+                        <li><a class="dropdown-item" href="blog-home.html">Register</a></li>
                         <li><a class="dropdown-item" href="blog-home.html">Register</a></li>
                         <li><a class="dropdown-item" href="blog-post.html">Logout</a></li>
                     </ul>
@@ -73,5 +77,7 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/scripts.js"></script>s
+<!--<script src="js/scripts.js"></script>-->
+<!--<script src="@{/css/scripts.js}"></script>-->
+<script th:src="@{/js/scripts.js}"></script>
 </html>
