--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,34 +5,34 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
-<!--        <link href="css/styles.css" rel="stylesheet"/>-->
-    <link rel="stylesheet" th:href="@{/css/styles.css}" />
-<!--    <link rel="stylesheet" href="@{/js/styles.css}"/>-->
+    <!--        <link href="css/styles.css" rel="stylesheet"/>-->
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+    <!--    <link rel="stylesheet" href="@{/js/styles.css}"/>-->
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">RunGroup</title>
 </head>
 
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
-        <a class="navbar-brand" href="index.html">Run Group</a>
+        <a class="navbar-brand" th:href="@{/}">Run Group</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">Find Clubs</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Find Events</a></li>
-                <li class="nav-item"><a class="nav-link" href="pricing.html">Directory</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/clubs}">Find Clubs</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/events}">Find Events</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/}">Directory</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
                         <li><a class="dropdown-item" th:href="@{clubs/new}">Create Running Club</a></li>
-                        <li><a class="dropdown-item" href="blog-home.html">Register</a></li>
-                        <li><a class="dropdown-item" href="blog-home.html">Register</a></li>
-                        <li><a class="dropdown-item" href="blog-post.html">Logout</a></li>
+                        <li><a class="dropdown-item" th:href="blog-home.html">Register</a></li>
+                        <li><a class="dropdown-item" th:href="blog-home.html">Register</a></li>
+                        <li><a class="dropdown-item" th:href="blog-post.html">Logout</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
